--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             
         </ul>
     </nav>
+
     <section class="banner">
         <h1 class="title-banner"> texto aquí</h1>
         <a href="#" class="btn-banner"></a>
@@ -26,22 +27,23 @@
 
     <section class="article">
         <h1 class="title-article">Texto aqui</h1>
-        <p class="parrafo-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel vitae maiores nesciunt quibusdam ad, numquam eligendi officia blanditiis corporis? Quasi, repellendus! Repudiandae voluptatibus facere eius cupiditate laborum omnis error illo. Blanditiis, aperiam voluptas, ratione asperiores quia illo beatae, explicabo molestias in eum ducimus porro harum sapiente culpa deleniti doloribus ab aliquam numquam. Alias reiciendis neque incidunt quidem numquam a impedit facilis cum tempore deserunt cumque magnam fuga earum laudantium error, quam, adipisci porro ipsam rerum ipsum consectetur nihil quo doloremque! Atque recusandae dignissimos vitae ratione impedit molestias assumenda asperiores adipisci cupiditate! Itaque vero sunt dolores fugiat reiciendis nemo dolorum ut.
-
-        </p>
+        <p class="parrafo-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel vitae maiores nesciunt quibusdam ad, numquam eligendi officia blanditiis corporis? Quasi, repellendus! Repudiandae voluptatibus facere eius cupiditate laborum omnis error illo. Blanditiis, aperiam voluptas, ratione asperiores quia illo beatae, explicabo molestias in eum ducimus porro harum sapiente culpa deleniti doloribus ab aliquam numquam. Alias reiciendis neque incidunt quidem numquam a impedit facilis cum tempore deserunt cumque magnam fuga earum laudantium error, quam, adipisci porro ipsam rerum ipsum consectetur nihil quo doloremque! Atque recusandae dignissimos vitae ratione impedit molestias assumenda asperiores adipisci cupiditate! Itaque vero sunt dolores fugiat reiciendis nemo dolorum ut.</p>
         <div class="galery">
             <div class="box-galery">
                 <img src="" alt="" class="box-img">
             </div>
             <a href="#" class="box-btn"></a>
+
             <div class="box-galery">
                 <img src="" alt="" class="box-img">
             </div>
             <a href="#" class="box-btn"></a>
+
             <div class="box-galery">
                 <img src="" alt="" class="box-img">
             </div>
             <a href="#" class="box-btn"></a>
+
             <div class="box-galery">
                 <img src="" alt="" class="box-img">
             </div>
@@ -49,8 +51,9 @@
 
         </div>   
     </section>
+    
     <footer class="pie-pag">
-        <p>jhon baby</p>
+        <p class="text-footer">jhon baby</p>
     </footer>
 
 </body>
