cambio en estilos

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
         <img src="#" alt="texto imagen" class="logo">
     </header>
     <nav class="nav"> 
-        <ul class="item">
+        <ul class="barnav">
             <li class="menu">titulo 1</li>
             <li class="menu">titulo 2</li>
             <li class="menu">titulo 3</li>
             <li class="menu">titulo 4</li>
+            <li class="menu">titulo 5</li>
             
         </ul>
     </nav>
 
     <section class="banner">
         <h1 class="title-banner"> texto aquí</h1>
-        <a href="#" class="btn-banner"></a>
+        <a href="#" class="btn-banner">boton</a>
     </section>
 
     <section class="article">
